# inventory-monte-carlo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
.github/workflows/: build.yml
src/: main.cpp
